# audiostack

./: .gitignore  Designing_the_Second_iteration.MD  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: unittest-and-lint.yml
app/: exceptions.py  main.py
app/api/: routes.py
app/services/: audio_converter.py
tests/: test_routes.py
tests/test_files/: aac_long.m4a  aiff_short.aif  m4a_short.m4a
