# Core project metadata and dependencies
[project]
requires-python = ">=3.13"

# Tool configurations below
[tool.black]
line-length = 120

[tool.mypy]
strict = true
check_untyped_defs = true
disallow_untyped_decorators = false
exclude = ["\\.venv"]
ignore_missing_imports = true
mypy_path = ["."]

[tool.flake8]
max-line-length = 120
ignore = ["E203"]
exclude = [".venv", ".git"]

pythonpath = ["."]
testpaths = ["tests"]

[tool.isort]
profile = "black"
filter_files = true
skip_glob = ["migrations"]

